tdf#132770 - FORMATTING: Import inserted text tag <ins> (underlined)

Change-Id: I5819ce4d4551bbd781921d847131f15cf2b94a38
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179771
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 7112bc2a98b06217302fb18e52fcbd03f8744f79)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179840
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>